Add offset options to the configuration file

--- a/sample.config
+++ b/sample.config
@@ -2,10 +2,12 @@
 ; Rename to ~/.tatlin
 
 [machine]
-platform_w = 50
-platform_d = 50
+platform_w = 100
+platform_d = 100
+platform_offset_x = 0
+platform_offset_y = 0
 
 [ui]
 window_w = 800
 window_h = 600
-gcode_2d = 1
+gcode_2d = 0
