Handle gcode G28, add z platform offset

--- a/sample.config
+++ b/sample.config
@@ -6,8 +6,9 @@ platform_w = 100
 platform_d = 100
 platform_offset_x = 0
 platform_offset_y = 0
+platform_offset_z = 0
 
 [ui]
 window_w = 800
-window_h = 600
+window_h = 700
 gcode_2d = 0
