Add files necessary to build a draft deb package

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # Python
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
 __pycache__/
 *.egg-info/
 *.egg
@@ -19,7 +17,7 @@ ENV/
 .DS_Store
 
 # Windows
-.Thumbs.db
+Thumbs.db
 Desktop.ini
 
 # Linux
@@ -36,4 +34,8 @@ Desktop.ini
 *.tmp
 *.prof
 
+# distutils
+MANIFEST
+/build/
 /dist/
+.pybuild/
