--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -31,17 +31,22 @@ jobs:
         sudo apt-get install python3-six
 
     - name: Build DEB package
-      run: dpkg-buildpackage -b -rfakeroot -us -uc
+      run: |
+        mkdir -p package
+        mv tatlin package/tatlin
+        cd package
+        dpkg-buildpackage -b -rfakeroot -us -uc
 
     - name: Upload DEB package as artifact
       uses: actions/upload-artifact@v2
       with:
         name: debian-package
-        path: ../*_all.deb
+        path: '*_all.deb'
 
     - name: Setup GitHub CLI
       run: gh auth login --with-token ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create GitHub Release and Upload DEB package
       run: |
-        gh release create ${{ github.ref }} ../*_all.deb --title "Release ${{ github.ref }}" --notes "Release of ${{ github.ref }}"
+        gh release create ${{ github.ref }} *_all.deb --title "Release ${{ github.ref }}" --notes "Release of ${{ github.ref }}"
+
