--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -32,21 +32,19 @@ jobs:
 
     - name: Build DEB package
       run: |
-        mkdir -p package
-        mv tatlin package/tatlin
-        cd package
         dpkg-buildpackage -b -rfakeroot -us -uc
+        pwd
 
     - name: Upload DEB package as artifact
       uses: actions/upload-artifact@v2
       with:
         name: debian-package
-        path: '*_all.deb'
+        path: /home/runner/work/tatlin/*_all.deb
 
     - name: Setup GitHub CLI
       run: gh auth login --with-token ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create GitHub Release and Upload DEB package
       run: |
-        gh release create ${{ github.ref }} *_all.deb --title "Release ${{ github.ref }}" --notes "Release of ${{ github.ref }}"
+        gh release create ${{ github.ref }} /home/runner/work/tatlin/*_all.deb --title "Release ${{ github.ref }}" --notes "Release of ${{ github.ref }}"
 
