--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -44,7 +44,9 @@ jobs:
     # https://docs.github.com/en/actions/using-workflows/using-github-cli-in-workflows
     - name: Create GitHub Release and Upload DEB package
       run: |
-        gh release create ${{ github.ref }} /home/runner/work/tatlin/*_all.deb --title "Release ${{ github.ref }}" --notes "Release of ${{ github.ref }}"
+        TAG_NAME=${{ github.ref }}
+        TAG_NAME=${TAG_NAME##refs/tags/}
+        gh release create $TAG_NAME /home/runner/work/tatlin/*_all.deb --title "$TAG_NAME" --notes "Release of $TAG_NAME"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
