debian action workflow: fix commit messages in release notes

--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -54,7 +54,7 @@ jobs:
       run: |
         TAG_NAME=${{ github.ref }}
         TAG_NAME=${TAG_NAME##refs/tags/}
-        gh release create $TAG_NAME /home/runner/work/tatlin/*_all.deb --title "$TAG_NAME" --notes "Changes:\n${COMMIT_MESSAGES}}"
+        gh release create $TAG_NAME /home/runner/work/tatlin/*_all.deb --title "$TAG_NAME" --notes "Changes:\n$COMMIT_MESSAGES"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
