debian action workflow: another stab at fixing release notes

--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -46,7 +46,7 @@ jobs:
         git fetch --tags
         PREVIOUS_TAG=$(git describe --abbrev=0 --tags $(git rev-list --tags --skip=1 --max-count=1))
         COMMIT_MESSAGES=$(git log --pretty=format:"- %s" ${PREVIOUS_TAG}..HEAD)
-        echo "{COMMIT_MESSAGES}=${COMMIT_MESSAGES}" >> "$GITHUB_ENV"
+        echo "COMMIT_MESSAGES=${COMMIT_MESSAGES}" >> "$GITHUB_ENV"
 
     # The GitHub CLI is pre-installed on GitHub-hosted runners.
     # https://docs.github.com/en/actions/using-workflows/using-github-cli-in-workflows
@@ -54,7 +54,7 @@ jobs:
       run: |
         TAG_NAME=${{ github.ref }}
         TAG_NAME=${TAG_NAME##refs/tags/}
-        gh release create $TAG_NAME /home/runner/work/tatlin/*_all.deb --title "$TAG_NAME" --notes "Changes:\n$COMMIT_MESSAGES"
+        gh release create $TAG_NAME /home/runner/work/tatlin/*_all.deb --title "$TAG_NAME" --notes "Release of $TAG_NAME"$'\n\n'"Commits:"$'\n'"$COMMIT_MESSAGES"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
