--- a/tatlin.desktop
+++ b/tatlin.desktop
@@ -6,5 +6,5 @@ Exec=tatlin
 MimeType=text/plain;text/x-gcode;application/x-gcode;model/stl;model/x.stl-ascii;model/x.stl-binary
 Terminal=false
 Type=Application
-Icon=/usr/lib/python3/dist-packages/tatlin/tatlin-logo.png
+Icon=tatlin.png
 Categories=Utility
