Automate DEB package creation (#25)
* Modify dir structure and entry point to adapt code for source
distribution

* Add files necessary to build a draft deb package

* Add a .desktop file and an actions workflow for Debian

* Add missing dependencies to debian action

* Fix relative paths in debian action workflow

* Fix path in debian action workflow

* Fix debian action workflow gh usage

* Only run the action on tag

* Remove the branch condition in debian.yml

* github workflow debian: fix tag name

* debian action workflow: include commit messages in release notes

* debian action workflow: fix commit messages in release notes

* debian action workflow: another stab at fixing release notes

* debian workflow action: clean up release notes

* debian action workflow: fix multiline commit messages

* debian action workflow: another attempt at a multiline fix

* debian action workflow: another attempt at a multiline fix

* debian workflow action: another attempt at fixing release notes

* Modify github actions package workflow to support deb/rpm packages
Add rpm spec
Fix tatlin logo packaging

* build-packages workflow action: fix package path

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Python
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
 __pycache__/
+*.egg-info/
+*.egg
 
 # virtual environments
 venv/
@@ -17,7 +17,7 @@ ENV/
 .DS_Store
 
 # Windows
-.Thumbs.db
+Thumbs.db
 Desktop.ini
 
 # Linux
@@ -33,3 +33,9 @@ Desktop.ini
 *.log
 *.tmp
 *.prof
+
+# distutils
+MANIFEST
+/build/
+/dist/
+.pybuild/
