--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3 # the repo is checkout out to /home/runner/work/tatlin/tatlin
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
@@ -41,8 +41,36 @@ jobs:
           name: deb-package
           path: /home/runner/work/tatlin/*_all.deb
 
+  build-rpm:
+    runs-on: ubuntu-latest
+
+    container:
+      image: fedora:38
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          sudo dnf install python3-devel
+          sudo dnf install python3-wxpython4
+          sudo dnf install python3-numpy
+          sudo dnf install python3-pyopengl
+          sudo dnf install python3-pillow
+          sudo dnf install python3-six
+
+      - name: Build RPM package
+        run: |
+          ls -la
+
   create-release:
-    needs: [build-deb]
+    needs: [ build-deb, build-rpm ]
     runs-on: ubuntu-latest
 
     steps:
