Fix github action: run pwd in rpm build job

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Build RPM package
         run: |
-          ls -la
+          pwd
 
   create-release:
     needs: [ build-deb, build-rpm ]
