--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -67,7 +67,19 @@ jobs:
 
       - name: Build RPM package
         run: |
-          pwd
+          VERSION=$(rpm -q --specfile tatlin.spec --qf %{VERSION})
+          cd /__w/tatlin
+          mkdir -p rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS}
+          cp tatlin/tatlin.spec rpmbuild/SPECS/
+          mv tatlin tatlin-$VERSION
+          tar -czvf rpmbuild/SOURCES/tatlin-$VERSION.tar.gz tatlin-$VERSION
+          rpmbuild -ba rpmbuild/SPECS/tatlin.spec
+
+      - name: Upload RPM package as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: rpm-package
+          path: /__w/tatlin/rpmbuild/RPMS/noarch/*.rpm
 
   create-release:
     needs: [ build-deb, build-rpm ]
@@ -94,6 +106,12 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: deb-package
+          path: ./packages/
+
+      - name: Download RPM package
+        uses: actions/download-artifact@v3
+        with:
+          name: rpm-package
           path: ./packages/
 
       # The GitHub CLI is pre-installed on GitHub-hosted runners.
