Fix github actions: add missing rpm-build dependency

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -58,6 +58,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo dnf install -y rpm-build
           sudo dnf install -y python3-devel
           sudo dnf install -y python3-wxpython4
           sudo dnf install -y python3-numpy
