Fix github actions: cd /github/home before rpmbuild

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -70,7 +70,8 @@ jobs:
           mkdir /github/home/tatlin-$VERSION
           cp -r * /github/home/tatlin-$VERSION
           tar -czvf /github/home/rpmbuild/SOURCES/tatlin-$VERSION.tar.gz /github/home/tatlin-$VERSION
-          rpmbuild -ba /github/home/rpmbuild/SPECS/tatlin.spec
+          cd /github/home
+          rpmbuild -ba rpmbuild/SPECS/tatlin.spec
         shell: bash
 
       - name: Upload RPM package as artifact
