--- a/tatlin.desktop
+++ b/tatlin.desktop
@@ -2,7 +2,7 @@
 Name=Tatlin
 GenericName=G-code Viewer
 Comment=Lightweight G-code and STL viewer
-Exec=tatlin
+Exec=tatlin %f
 MimeType=text/plain;text/x-gcode;application/x-gcode;model/stl;model/x.stl-ascii;model/x.stl-binary
 Terminal=false
 Type=Application
