Fix github actions: list dist dir

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -157,6 +157,9 @@ jobs:
       - name: Build Mac package
         run: pyinstaller tatlin.mac.spec
 
+      - name: List dir
+        run: ls -l dist
+
       - name: Zip Mac package
         run: cd dist & 7z a tatlin-mac.zip tatlin.app
 
