Fix github action: build-mac command chaining

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -161,7 +161,7 @@ jobs:
         run: ls -l dist
 
       - name: Zip Mac package
-        run: cd dist & 7z a tatlin-mac.zip tatlin.app
+        run: cd dist && 7z a tatlin-mac.zip tatlin.app
 
       - name: Upload Mac package as artifact
         uses: actions/upload-artifact@v2
